--- a/VaccineC/src/app/pages/pessoas/pessoas.component.scss
+++ b/VaccineC/src/app/pages/pessoas/pessoas.component.scss
@@ -87,3 +87,13 @@
 .complement-button-row {
   margin: 0.75rem !important;
 }
+
+.mat-column-Options {
+  flex: 0 0 100px !important;
+  white-space: unset !important;
+}
+
+.mat-cell-Options {
+  flex: 0 0 100px !important;
+  white-space: unset !important;
+}
