--- a/VaccineC/src/app/pages/pessoas/pessoas.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas.component.html
@@ -73,7 +73,7 @@
                 </ng-container>
 
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="editPerson(row.ID)"
+                <mat-row class="hover-element-row" *matRowDef="let row; columns: displayedColumns;" (dblclick)="editPerson(row.ID)"
                   (dblclick)="tabGroup.selectedIndex=1" style="cursor:pointer;"></mat-row>
 
                 <!-- Row shown when there is no matching data. -->
