--- a/VaccineC/src/app/pages/recursos/recursos.component.html
+++ b/VaccineC/src/app/pages/recursos/recursos.component.html
@@ -66,7 +66,7 @@
                                 </ng-container>
 
                                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                                <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="editResource(row.ID)" (dblclick)="tabGroup.selectedIndex=1" style="cursor:pointer;"></tr>
+                                <tr class="hover-element-row" mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="editResource(row.ID)" (dblclick)="tabGroup.selectedIndex=1" style="cursor:pointer;"></tr>
 
                                 <!-- Row shown when there is no matching data. -->
                                 <tr class="mat-row" *matNoDataRow>
