--- a/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
@@ -57,6 +57,12 @@
                                         {{resolveExibitionSituation(element.Situation)}} </mat-cell>
                                 </ng-container>
 
+                                <ng-container matColumnDef="ProductsInfo">
+                                    <mat-header-cell *matHeaderCellDef> Produtos </mat-header-cell>
+                                    <mat-cell *matCellDef="let element">
+                                        {{element.ProductsInfo}} </mat-cell>
+                                </ng-container>
+
                                 <ng-container matColumnDef="ProductsAmount">
                                     <mat-header-cell *matHeaderCellDef> R$ </mat-header-cell>
                                     <mat-cell *matCellDef="let element"> {{element.ProductsAmount | currency : 'R$' }}
