--- a/VaccineC/src/app/pages/movimentar-estoque/update-movement-product-exit-dialog.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/update-movement-product-exit-dialog.html
@@ -15,10 +15,10 @@
                 </mat-autocomplete>
                 <mat-icon matSuffix>search</mat-icon>
                 <mat-error
-                *ngIf="movementProductForm.controls.ProductName.touched && movementProductForm.controls.ProductName.invalid">
-                <span *ngIf="movementProductForm.controls.ProductName.errors?.required">O Produto é
-                    obrigatório.</span>
-            </mat-error>
+                    *ngIf="movementProductForm.controls.ProductName.touched && movementProductForm.controls.ProductName.invalid">
+                    <span *ngIf="movementProductForm.controls.ProductName.errors?.required">O Produto é
+                        obrigatório.</span>
+                </mat-error>
             </mat-form-field>
         </div>
 
@@ -27,7 +27,7 @@
                 <mat-label>Quantidade</mat-label>
                 <input type="number" matInput formControlName="UnitsNumber" [(ngModel)]="UnitsNumber"
                     (blur)="getAmount()" placeholder="Ex. 10" required>
-                    <mat-error
+                <mat-error
                     *ngIf="movementProductForm.controls.UnitsNumber.touched && movementProductForm.controls.UnitsNumber.invalid">
                     <span *ngIf="movementProductForm.controls.UnitsNumber.errors?.required">A Quantidade é
                         obrigatória.</span>
@@ -42,10 +42,10 @@
                     readonly placeholder="0,00" mask="separator.2" [thousandSeparator]="'.'" [decimalMarker]="','">
                 <span matPrefix>R$&nbsp;</span>
                 <mat-error
-                *ngIf="movementProductForm.controls.UnitaryValue.touched && movementProductForm.controls.UnitaryValue.invalid">
-                <span *ngIf="movementProductForm.controls.UnitaryValue.errors?.required">O R$ Unitário é
-                    obrigatório.</span>
-            </mat-error>
+                    *ngIf="movementProductForm.controls.UnitaryValue.touched && movementProductForm.controls.UnitaryValue.invalid">
+                    <span *ngIf="movementProductForm.controls.UnitaryValue.errors?.required">O R$ Unitário é
+                        obrigatório.</span>
+                </mat-error>
             </mat-form-field>
 
             <mat-form-field appearance="fill" class="col-sm-6" floatLabel="always">
@@ -54,9 +54,9 @@
                     placeholder="0,00" mask="separator.2" [thousandSeparator]="'.'" [decimalMarker]="','">
                 <span matPrefix>R$&nbsp;</span>
                 <mat-error
-                *ngIf="movementProductForm.controls.Amount.touched && movementProductForm.controls.Amount.invalid">
-                <span *ngIf="movementProductForm.controls.Amount.errors?.required">O R$ Total é obrigatório.</span>
-            </mat-error>
+                    *ngIf="movementProductForm.controls.Amount.touched && movementProductForm.controls.Amount.invalid">
+                    <span *ngIf="movementProductForm.controls.Amount.errors?.required">O R$ Total é obrigatório.</span>
+                </mat-error>
             </mat-form-field>
         </div>
 
@@ -105,6 +105,17 @@
                         <ng-container matColumnDef="ValidityBatchDate">
                             <mat-header-cell *matHeaderCellDef> Validade </mat-header-cell>
                             <mat-cell *matCellDef="let row"> {{row.ValidityBatchDate| date: 'dd/MM/yyyy'}} </mat-cell>
+                        </ng-container>
+
+                        <!-- Row Button -->
+                        <ng-container matColumnDef="Warning">
+                            <mat-header-cell *matHeaderCellDef></mat-header-cell>
+                            <mat-cell *matCellDef="let row">
+                                <i class="fa-solid fa-circle-exclamation" style="margin:3px;color:red;"
+                                    title="Atenção: Lote vencido"
+                                    [hidden]=!isExpired(row.NumberOfUnitsBatch,row.ValidityBatchDate)></i>
+                            </mat-cell>
+                            <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
                         </ng-container>
 
                         <!-- Id Hidden Column -->
